Thu Mar  3 12:11:05 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/response.rb (Wee::Response): Use the passed mime_type as
	  content-type (bug fix).

	* wee/request.rb: Made 'info' attribute writeable.

	* wee/core/callback.rb: Added reader method for 'obj'

	* wee/core/component.rb: Added #parent method, to retrieve the parent
	  component from a child if existent. The parent attribute will be set
	  during #add_child.

Thu Mar  3 11:38:21 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/application.rb, wee/pageless/application.rb
	  (request_handler_expired): Forward to an URL that includes the info
	  part but neither the request_handler_id nor the page_id.

Sat Feb 26 17:12:35 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/request.rb, test/test_request.rb, wee/pageless/request.rb,
	  wee/session.rb, wee/pageless/session.rb,
	  wee/renderer/html/canvas.rb, wee/renderer/html/brushes.rb:

	  - request delimeter changed to /___/ (looks nicer)

	  - refactored Request#build_url, which now takes a hash and
	    remembers already specified values

	  - A Request knows now itself whether it's a action or a render 
	    request.

	  - added Request#info attribute. This is a part of the URL that you
	    can use for your own purposes. It is remembered across requests
	    unless you overwrite its value.

Sat Feb 26 14:22:34 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* wee/core/presenter.rb, wee/session.rb, wee/application.rb: renamed @properties to @__properties

	* wee/core/component.rb: rename @children to @__children

	* wee/core/component.rb, wee/core/valueholder.rb: rename @decoration
	  to @__decoration

--------------------------------------------------------------------
TAGGED 0.7.0
--------------------------------------------------------------------

Tue Feb  1 19:58:08 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* SelectListTag (r.select_list): NON-backwards-compatible change!!!